#pragma once

/**
 * @file Couleur.h
 * @brief Couleurs des trois joueurs Yalta.
 */

namespace yalta {

/// Couleur d'un camp Yalta (partie à 3 joueurs).
enum class Couleur {
    BLANC,
    NOIR,
    ROUGE
};

} // namespace yalta
