#pragma once

/**
 * @file TypePiece.h
 * @brief Énumération des six types de pièces du jeu d'échecs.
 */

namespace yalta {

enum class TypePiece {
    PION,
    TOUR,
    CAVALIER,
    FOU,
    REINE,
    ROI
};

} // namespace yalta
